--- a/css/home.css
+++ b/css/home.css
@@ -196,5 +196,5 @@ nav>ul>li>a:hover {
 
 #powered-by{
     text-align: center;
-    font-family: dance, Arial, Helvetica, sans-serif;
+    font-family: handwriting, dance, Arial, Helvetica, sans-serif;
 }
